--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,7 @@ img {
 body {
   font-family: "Inter Tight", "Roboto", sans-serif;
   font-weight: 600;
+  margin: 0;
 }
 
 a {
@@ -62,23 +63,57 @@ footer {
   overflow: hidden;
 }
 
-header ul a {
-  font-weight: 500;
-  font-size: 16px;
-  /* line-height: 20px; */
-  line-height: 1.25;
-  text-align: center;
-  color: #fbfbfb;
-}
 .container {
   width: 1310px;
   margin: 0 auto;
   padding: 0 15px;
 }
+
+.navigation {
+  position: relative;
+}
+.title-navigation {
+  display: flex;
+  padding-top: 32px;
+  align-items: center;
+  position: absolute;
+  top: 32px;
+
+  z-index: 2;
+  padding: 4px 30px;
+}
+.nav-menu-wrapper {
+  display: flex;
+  gap: 8px;
+  margin-left: 366px;
+  margin-right: 20px;
+  font-weight: 500;
+  font-size: 16px;
+  /* line-height: 20px; */
+  line-height: 1.25;
+  text-align: center;
+}
 .nav-menu {
   border-radius: 12px;
   border: 1px solid #fbfbfb;
   padding: 12px;
+  background-color: transparent;
+  color: #fbfbfb;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.nav-menu:hover,
+.nav-menu:focus {
+  background-color: #d4bfc4;
+  color: #7a3145;
+  border: none;
+}
+.nav-menu:active {
+  background-color: #fbfbfb;
+  color: #7a3145;
+  border: none;
 }
 .nav-btn {
   min-width: 157px;
@@ -91,24 +126,26 @@ header ul a {
   text-transform: uppercase;
   color: #fbfbfb;
   background-color: #7a3145;
-  padding: 12px;
+  padding: 16px 32px;
   text-align: center;
   border-style: none;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.nav-btn:hover,
+.nav-btn:focus {
+  background-color: #d4bfc4;
+  color: #7a3145;
+}
+.nav-btn:active {
+  background-color: #fbfbfb;
+  color: #7a3145;
 }
 .title-navigation-logo {
   padding-left: 100px;
 }
-.nav-menu-wrapper {
-  display: flex;
-  gap: 8px;
-  margin-left: 366px;
-  margin-right: 20px;
-}
-.title-navigation {
-  display: flex;
-  padding-top: 32px;
-  align-items: center;
-}
+
 .title-logo {
   display: flex;
   gap: 9px;
@@ -146,8 +183,10 @@ header ul a {
 .hero-only-text {
   display: block;
   width: 640px;
+  padding-top: 232px;
   padding-left: 100px;
-  padding-right: 32px;
+  padding-right: 36px;
+  padding-bottom: 52px;
 }
 .thumb {
   display: block;
@@ -216,7 +255,9 @@ header ul a {
   align-items: center;
 }
 .how-it-works-count {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border-radius: 50%;
   background: #7a3145;
   border: 5px solid #d4bfc4;
@@ -313,7 +354,7 @@ header ul a {
   align-content: center;
 }
 
-.reviews-section h2 {
+.reviews-section-title-main {
   font-weight: 600;
   font-size: 64px;
   /* line-height: 64px; */
@@ -333,25 +374,7 @@ header ul a {
   color: #141414;
   text-align: left;
 }
-.reviews-section h3 {
-  font-weight: 600;
-  font-size: 18px;
-  /* line-height: 20px; */
-  line-height: 1.11111;
-  letter-spacing: -0.01em;
-  text-transform: uppercase;
-  text-align: center;
-  color: #141414;
-  margin-bottom: 8px;
-}
-.reviews-section p {
-  font-weight: 500;
-  font-size: 16px;
-  /* line-height: 20px; */
-  line-height: 1.25;
-  text-align: center;
-  color: #858585;
-}
+
 .reviews-section-title {
   padding-top: 100px;
   padding-left: 100px;
@@ -365,19 +388,16 @@ header ul a {
   display: flex;
   padding-left: 100px;
   gap: 24px;
-  justify-content: center;
+  justify-content: space-between;
   padding-bottom: 100px;
   padding-right: 100px;
 }
 .reviews-card {
-  box-sizing: border-box;
   border: 1px solid #d4bfc4;
   background: #fbfbfb;
   border-radius: 24px;
-  width: 344px;
-  height: 248px;
   width: calc((100% - 48px) / 3);
-  padding: 20px;
+  padding: 20px 20px 40px 20px;
 }
 
 .reviews-photo {
@@ -385,10 +405,28 @@ header ul a {
   width: 56px;
   height: 56px;
   border-radius: 50%;
-  margin-bottom: 24px;
-  justify-content: center;
+  margin: 0 auto;
 }
-
+.reviews-card-name {
+  font-weight: 600;
+  font-size: 18px;
+  /* line-height: 20px; */
+  line-height: 1.11111;
+  letter-spacing: -0.01em;
+  text-transform: uppercase;
+  text-align: center;
+  color: #141414;
+  margin-top: 24px;
+  margin-bottom: 8px;
+}
+.reviews-card-text {
+  font-weight: 500;
+  font-size: 16px;
+  /* line-height: 20px; */
+  line-height: 1.25;
+  text-align: center;
+  color: #858585;
+}
 .order h2 {
   font-weight: 600;
   font-size: 64px;
@@ -426,16 +464,20 @@ header ul a {
   line-height: 1.25;
   color: #d4bfc4;
 }
-.wrapper-order-social .social-list a {
+.social-list-wrap {
+  display: flex;
+  gap: 12px;
+}
+.social-list-link {
   font-weight: 600;
   font-size: 18px;
   /* line-height: 20px; */
   line-height: 1.11111;
   letter-spacing: -0.01em;
   text-transform: uppercase;
+  cursor: pointer;
   color: #fbfbfb;
 }
-
 .wrapper-order {
   padding: 100px;
 }
@@ -484,10 +526,7 @@ header ul a {
 .wrapper-order-social-text {
   margin-bottom: 16px;
 }
-.social-list {
-  display: flex;
-  gap: 12px;
-}
+
 footer .footer-text {
   font-weight: 500;
   font-size: 16px;
